fixed lot of things, added nav bar to all child pages, added chronicles and fixed visibility issues

--- a/internal/Sign-up/signup.css
+++ b/internal/Sign-up/signup.css
@@ -5,11 +5,46 @@
 }
 body {
   background-color: #000000;
+  color: aliceblue;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-right: clamp(1rem, 5vw, 2rem);
+  padding-left: clamp(1rem, 5vw, 2rem);
+}
+#header {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#navbar ul {
+    list-style-type: none;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+}
+#navbar li {
+    float: left;
+}
+#navbar a {
+    text-decoration: none;
+    color: aliceblue;
+    transition: all 0.3s ease-in;
+    padding: 5px;
+    display: block;
+}
+#navbar a:hover {
+    color: orchid;
+}
+input {
+  color: #ffffff;
 }
 .form-control {
+  margin-top: 2rem;
   background-color: #042037;
   color: #ffffff;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
