--- a/internal/login/login.css
+++ b/internal/login/login.css
@@ -7,9 +7,40 @@ body {
   background-color: #212121;
   color: #fff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-right: clamp(1rem, 5vw, 2rem);
+  padding-left: clamp(1rem, 5vw, 2rem);
+}
+#header {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+#navbar ul {
+    list-style-type: none;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+}
+#navbar li {
+    float: left;
+}
+#navbar a {
+    text-decoration: none;
+    color: aliceblue;
+    transition: all 0.3s ease-in;
+    padding: 5px;
+    display: block;
+}
+#navbar a:hover {
+    color: orchid;
 }
 .form-container {
   width: 100%;
